--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
         renderscriptSupportModeEnabled true
         vectorDrawables.useSupportLibrary = true
     }
+
+    dataBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -72,6 +77,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
+    compile 'com.github.razerdp:BasePopup:1.9.4'
 
     implementation 'com.airbnb.android:lottie:2.5.5'
     compile('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
