--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 
     compile "com.android.support:preference-v14:$rootProject.ext.supportLibraryVersion"
 
+
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
